# ChangeLog for www-apps/ikiwiki
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/ikiwiki/ChangeLog,v 1.19 2013/12/26 13:10:22 mrueg Exp $

  26 Dec 2013; Manuel Rüger <mrueg@gentoo.org> metadata.xml:
  Add Alice Ferrazzi as maintainer.

  24 Dec 2013; Manuel Rüger <mrueg@gentoo.org> metadata.xml:
  Add myself to metadata.xml.

  23 Dec 2013; Pacho Ramos <pacho@gentoo.org> ikiwiki-3.20130904.1.ebuild:
  Add missing dependency, bug #436458 by W. Trevor King

  23 Dec 2013; Pacho Ramos <pacho@gentoo.org> -ikiwiki-3.20120629.ebuild,
  -ikiwiki-3.20120725.ebuild, -ikiwiki-3.20121212.ebuild, metadata.xml:
  Cleanup due bug #65652

*ikiwiki-3.20130904.1 (15 Dec 2013)

  15 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +ikiwiki-3.20130904.1.ebuild:
  NMU: Version bump. Fixes bug #399007

*ikiwiki-3.20121212 (27 Dec 2012)

  27 Dec 2012; Torsten Veller <tove@gentoo.org> +ikiwiki-3.20121212.ebuild:
  Version bump (#399007)

*ikiwiki-3.20120725 (31 Aug 2012)

  31 Aug 2012; Torsten Veller <tove@gentoo.org> -ikiwiki-3.20120516.ebuild,
  +ikiwiki-3.20120725.ebuild:
  Version bump. Cleanup

*ikiwiki-3.20120629 (01 Jul 2012)

  01 Jul 2012; Torsten Veller <tove@gentoo.org> +ikiwiki-3.20120629.ebuild:
  Version bump

  21 May 2012; Torsten Veller <tove@gentoo.org> -ikiwiki-3.20101201.ebuild,
  -ikiwiki-3.20110123.ebuild, -ikiwiki-3.20110328.ebuild,
  -ikiwiki-3.20110608.ebuild:
  Cleanup

*ikiwiki-3.20120516 (19 May 2012)

  19 May 2012; Torsten Veller <tove@gentoo.org> +ikiwiki-3.20120516.ebuild:
  Version bump (#416589)

*ikiwiki-3.20110608 (11 Jun 2011)

  11 Jun 2011; Torsten Veller <tove@gentoo.org> +ikiwiki-3.20110608.ebuild:
  Version bump

*ikiwiki-3.20110328 (29 Mar 2011)

  29 Mar 2011; Torsten Veller <tove@gentoo.org> +ikiwiki-3.20110328.ebuild:
  Version bump

*ikiwiki-3.20110123 (23 Jan 2011)

  23 Jan 2011; Torsten Veller <tove@gentoo.org> -ikiwiki-3.20101112.ebuild,