@@ -1,4 +1,6 @@
 DIST ikiwiki_3.20130904.1.tar.gz 3111307 SHA256 1014c30060fc2567845a3a782bf2dd022786cffb5fedbc6800c8f844be66bedb SHA512 c52541b3308262ff47d7f24e1cccfb619481f08cc89944614aa8b17c6b2628bec74fda97a4f6aed0a7da4717d9a934f93fe2fc148ecdf12b3ac86b46a83d71c5 WHIRLPOOL 7257be1965e395b245655c4ba39ecc4a9742f475778200e7ed28b84734703f223cee0b9927b6972d9c3426b10e228ce4d7cfb1dbce7832f69bdceaf213733ebd
+DIST ikiwiki_3.20140125.tar.gz 3170332 SHA256 0d822a02eca7b749d7b7d57eb0c1ac362c63093c72b8591fd7db5e54612f291b SHA512 bcf9bd5e4da79680d212fab0d5d38ebab97ba1f462acd0db119469ed8670a53eaf20c357e614cdb0cb1985364680503078caa6622b8c1409a45fa23e57256dc3 WHIRLPOOL 81c92f7c870a0df7e7e61eef51ff8a6d6bd87eecfba5c83a3b3f6c30da5ca74383a35ee3af04dbf9c8ef544bd043b60a9c4c0014eba6b47aa4e4baf9d98ea553
 EBUILD ikiwiki-3.20130904.1.ebuild 1887 SHA256 3ac22dc67bdb67e69b86e434730ae7de68e3f12329d0689773682104f38680e5 SHA512 b369ae9093336121167fd1722e8cf5d8b71bfb6dccef88be23b4f4123ed182bbd2a1c2c8ee84c7260ddacce96e907ee74bca9c2f17ca5622a788923c6ce984c1 WHIRLPOOL 4e774a61f13247c54faf04d6fed96e02931a9712a947893f6326ae9556694470b8e0c64c61c3ec51ff4301420db2a41e3222590fdb07a1d6098954c6a90b4360
-MISC ChangeLog 2787 SHA256 b120ffbc25f93b6acbb964ff1cc26dff7e7d16758f5dbd8e265ea978323637b4 SHA512 eff22815e37470f6e76ae5a90e39e38b4ec46c22a73cdc8ce1e606e7db12db34b7a9c6868a2d4bdc582f647409367989e4079a04d10fcb927d68d67ec71091e1 WHIRLPOOL a40f916a4eee69c1cd12472323b348619b9b94c5b566d5f29b3ab52ef91e467ac065e4fce814f55e62c356dfdc135546e10c727996a44d5c91e76b7c45bc877a
-MISC metadata.xml 509 SHA256 b84d3fc3618aca9b078003587a6bd929103eeda4c57938c2c7c124f016a60d47 SHA512 2c955ea04c6704625f01b00c144581da01a3311380e7f108de64773a8e017ab479b38211613cacd460d99f894dcb3e44e6a96b5d576e52d4ee703ad0fe1c3cd9 WHIRLPOOL 216fdb1536e8e6b719bda27f7620e8feef7d098549940d4adfe82bf59b24bafdcf4bd368afa3e636d63ad6f8a3eb1c3a539cbd66dd349ffda41db83f7553f071
+EBUILD ikiwiki-3.20140125.ebuild 2201 SHA256 804959b7a8ac86f58c66357a3d4b23e37e7601ac0e971caec70ab78940915b10 SHA512 32665ff0e20deb19e7f1629c0ea0b6d85222eb6fb823d67b9698e93298641eae003b386da134106209a09d69eadd321e5f2ab9d5abe1ae9e4d046ce9770d0fe2 WHIRLPOOL b6d17ce0d28e09b4f2b6836c99853802cc6329fa08cf1f07f1d9c2737de912d319f24fa7165f500c270ccb6a0878b5f3dbb928a32195987c39a554aa8d4b7e96
+MISC ChangeLog 3068 SHA256 8ec588a120cdddb1afd3aabacae3647a3ce5e72612b8e8242fb424040644acfa SHA512 d0f2cbd01abece77d58440666eda225f45d7030bf61d2d47baca0bc7c19a76e05897b30b8ba0cb54d6bc3402cc510c93809747df8ee56e3be229512a92bfe41c WHIRLPOOL 9a0cdf9b2d10a4928a32a0e2fd6147a0e60f060e748fea9b35255b6806d5893accc65cb9c728c799ba8bc0b4fcee91e3a8511bc11df1b54544f64024dbd7ece4
+MISC metadata.xml 540 SHA256 0e414659d53bd290c277063c33d6ea6756ac907f27f93cdc6d29d30be8923e6e SHA512 7e570f2029b8bcc2ecb2f09261442e7c56d1607d27aca7265235f87eabd711bc8f4ff0fa09cb81ace8b9dca188b516d4f1133ea4d08a600bd85ed592c8a7307e WHIRLPOOL df08dc6793e875fc7dab59d7a6adb87cbc9f7c134746e59a66de6a62f097ea34b55a0e460bb2012fc59b22c4a615e673ea67ec7eb0f5336a7ebab28f41c6c647
